--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,14 +3,25 @@
 .page-container {
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 20px;
-  position: relative; /* Make sure the container can have absolutely positioned children */
-  flex-direction: column; /* Align items in a column */
+  position: relative;
   background-image: url('/gradient_background.jpg');
   background-size: cover;
   background-position: center;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 10px;
+}
+
+.logo {
+  margin: 0 10px;
 }
 
 h1 {
